# project-sos

./: .clangd  CHANGELOG.md  README.md  conanfile.py  meson.build
demo/: color.cpp  color.h  main.cpp  rect.cpp  rect.h  vector2.cpp  vector2.h
docs/: planning-2024-05-01.md
include/sos/: group.h  point.h  process.h  process.ipp  rect.h  sos.h  sos.ipp
include/sos/input/: device.h  indirection.h  keyboard.h  keyboard.ipp  keycode.generated.h  mousebutton.generated.h  scancode.generated.h
include/sos/input/indirection/: functions.h  functions.ipp  indirection_map.h  indirection_map.ipp
include/sos/input/indirection/data/: keyboard_observer.ipp  reset_map.ipp
include/sos/time/: milliseconds.h
include/sos/video/: color.h  font.h  font.ipp  renderer.h  renderer.ipp  texture.h  texture.ipp  window.h  window.ipp
src/: group.cpp  group.h  main.cpp  process.h  process.ipp  sos.cpp  sos.h  sos.ipp
src/atoms/: milliseconds.h  rect.cpp  rect.h  vector2.cpp  vector2.h
src/demo/: color.h  color.ipp  rect.h  rect.ipp  vector2.h  vector2.ipp
src/input/: event.h  indirection.h  input.h  input.ipp  input_map.h  input_map.ipp  keyboard.generated.h  keyboard.h  keyboard.ipp  keycode.generated.h  keystate.h  mousebutton.h  scancode.generated.h
src/input/indirection/: functions.h  functions.ipp  indirection_map.h
src/input/indirection/data/: dispatch_map.ipp  keyboard_observer.ipp
src/input/tests/: automated.cpp  harness.ipp  indirection_tests.cpp  interactive.cpp  keyboard_tests.cpp  toolkit.h
src/video/: color.cpp  color.h  display.cpp  display.h  font.cpp  font.h  font.ipp  renderer.cpp  renderer.h  renderer.ipp  texture.cpp  texture.h  texture.ipp  window.h  window.ipp
tests/input/: indirection_tests.cpp  keyboard_tests.cpp  toolkit.h
